--- a/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial.csproj
+++ b/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Model\Events.cs" />
     <Compile Include="Model\EventsResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\EventRepository.cs" />
     <Compile Include="Service\EventsService.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
