--- a/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial.csproj
+++ b/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial/ServiceStackJQueryMobileTutorial.csproj
@@ -139,8 +139,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\EventRequest.cs" />
     <Compile Include="Model\Event.cs" />
-    <Compile Include="Model\Events.cs" />
     <Compile Include="Model\EventsResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EventRepository.cs" />
